objects/List_of_Students__c.object
<CustomObject>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>FirstName</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>List of Students</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>List of Students Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>List of Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>